--- a/code_irrigation_efficiency.Rmd
+++ b/code_irrigation_efficiency.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "A critique of irrigation efficiency modeling"
+title: "Global irrigation water demands biased by unreliable irrigation efficiencies"
 subtitle: "R code"
 author: "Arnald Puy"
 header-includes:
@@ -49,7 +49,8 @@ loadPackages <- function(x) {
 # Load the packages
 loadPackages(c("data.table", "tidyverse", "sensobol", "wesanderson",
                "cowplot", "parallel", "foreach", "doParallel",
-               "countrycode", "ggridges", "scales", "overlapping"))
+               "countrycode", "ggridges", "scales", "overlapping",
+               "sp", "rworldmap", "ncdf4"))
 
 # Create custom theme
 theme_AP <- function() {
@@ -107,23 +108,23 @@ fao_dt <- fao_dt[, Efficiency:= Efficiency / 100]
 # Create data set with E_a values as defined by Rohwer
 bos.rohwer.ea <- data.table("Irrigation" = c("Surface", "Sprinkler"),
                             "Value" = c(0.6, 0.7),
-                            "variable" = "E_a")
+                            "variable" = "E[a]")
 
 # Create data set with E_c values as defined by Rohwer
 bos.rohwer.ec <- data.table("Irrigation" = c("Surface", "Sprinkler"),
                             "Value" = c(0.8, 0.95),
-                            "variable" = "E_c")
+                            "variable" = "E[c]")
 
 bos.rohwer.all <- rbind(bos.rohwer.ec, bos.rohwer.ea)
 
 # As a function of scale
 bos.rohwer.mf.ec <- data.table("Scale" = c("<10.000 ha", ">10.000 ha"),
                                "Value" = c(0.85, 0.59),
-                               "variable" = "E_c")
+                               "variable" = "E[c]")
 
 bos.rohwer.mf.ed <- data.table("Scale" = c("<10.000 ha", ">10.000 ha"),
                                "Value" = c(0.81, 0.72),
-                               "variable" = "E_d")
+                               "variable" = "E[d]")
 
 bos.rohwer.mf.all <- rbind(bos.rohwer.mf.ec, bos.rohwer.mf.ed)
 ```
@@ -132,16 +133,16 @@ bos.rohwer.mf.all <- rbind(bos.rohwer.mf.ec, bos.rohwer.mf.ed)
 
 # PLOT -----------------------------------------------------------------------------
 
+bos2 <- copy(bos)
+bos2 <- setnames(bos2, c("E_a", "E_c", "E_d"), c("E[a]", "E[c]", "E[d]"))
+
 # Field and conveyance efficiency ----------------
 
-efficiencies_labeller <- c("E_c" = "E[c]",
-                           "E_a" = "E[a]")
-
-a <- bos %>%
-  melt(., measure.vars = c("E_a", "E_c")) %>%
+a <- bos2 %>%
+  melt(., measure.vars = c("E[a]", "E[c]")) %>%
   ggplot(., aes(value, fill = Irrigation, color = Irrigation)) +
   geom_histogram(position = "identity", alpha = 0.4, bins = 15) +
-  facet_wrap(~variable, labeller = as_labeller(efficiencies_labeller)) +
+  facet_wrap(~variable, labeller = label_parsed) +
   scale_x_continuous(breaks = pretty_breaks(n = 3)) +
   geom_vline(data = bos.rohwer.all, aes(xintercept = Value,
                                         color = Irrigation,
@@ -153,16 +154,12 @@ a <- bos %>%
 
 # As a function of scale -----------------------
 
-efficiencies_labeller <- c("E_c" = "E[c]",
-                           "E_a" = "E[a]",
-                           "E_d" = "E[d]")
-
-b <- melt(bos, measure.vars = c("E_c", "E_a", "E_d")) %>%
+b <- melt(bos2, measure.vars = c("E[c]", "E[a]", "E[d]")) %>%
   na.omit() %>%
   ggplot(., aes(value, fill = Scale, color = Scale)) +
   geom_histogram(bins = 15, position = "identity", alpha = 0.6) +
   labs(x = "Irrigation efficiency", y = "Counts") +
-  facet_wrap(~ variable, labeller = as_labeller(efficiencies_labeller)) +
+  facet_wrap(~ variable, labeller = label_parsed) +
   geom_vline(data = bos.rohwer.mf.all, aes(xintercept = Value,
                                           color = Scale,
                                           group = variable),
@@ -175,7 +172,7 @@ b <- melt(bos, measure.vars = c("E_c", "E_a", "E_d")) %>%
   scale_fill_manual(values = wes_palette(2, name = "Chevalier1"),
                     name = "Scale",
                     labels = c("<10.000 ha", ">10.000 ha")) +
-  theme_AP() 
+  theme_AP()
 
 bottom <- plot_grid(a, b, ncol = 1, labels = c("c", "d"))
 bottom
@@ -553,7 +550,7 @@ print(calc, n = Inf)
 
 ggplot(calc, aes(range)) +
   geom_histogram() +
-  labs(x = "Range", y = "Counts") +
+  labs(x = "Range", y = "N. of countries") +
   theme_AP()
 ```
 
@@ -634,6 +631,39 @@ for (i in 1:length(list_continents)) {
 gg
 ```
 
+```{r unc_analysis2, cache=TRUE, dependson="extract_output", fig.height=6.4, fig.width=5.2}
+
+# PLOT UNCERTAINTY IN EACH IRRIGATION TECHNOLOGY -----------------------------------
+
+gg <- list()
+
+for(i in 1:length(list_continents)) {
+  gg[[i]] <- uncertainty.dt[Approach == "Rohwer et al. 2007"][Continent %in% list_continents[[i]]] %>%
+    ggplot(.,aes(x = V1, y = fct_reorder(Country, V1), fill = IFT)) +
+    geom_density_ridges(scale = 2, alpha = 0.3) +
+    labs(x = "Irrigation efficiency", y = "") +
+    facet_wrap(~Continent, scales = "free") +
+    scale_x_continuous(breaks = pretty_breaks(n = 3),
+                       limits = c(0, 1)) +
+    theme_AP() +
+    theme(legend.position = "top")
+  if(i == 1) {
+    gg[[i]] <- gg[[i]] +
+      scale_fill_manual(values = c("#899DA4", "#C93312", "#DC863B", "#FAEFD1"),
+                        labels = c("Surface", "Sprinkler", "Micro", "Mixed"),
+                        name = "Irrigation")
+  } else if(i == 2) {
+    gg[[i]] <- gg[[i]] +
+      scale_fill_manual(values = c("#899DA4", "#C93312", "#FAEFD1"),
+                        labels = c("Surface", "Sprinkler", "Mixed"),
+                        name = "Irrigation")
+  }
+}
+
+gg
+```
+
+
 ```{r plot_rohwer_points, cache=TRUE, dependson="datasets", fig.height=6, fig.width=5.2}
 
 # PLOT ROHWER ET AL.'S IRRIGATION EFFICIENCY VALUES --------------------------------
@@ -658,7 +688,7 @@ dd
 ```
 
 
-```{r define_factor_unc, cache=TRUE, dependson="extract_output", fig.height=1.5, fig.width=5.6, dev = "pdf"}
+```{r define_factor_unc, cache=TRUE, dependson="extract_output", fig.height=1.5, fig.width=5.6}
 
 # CALCULATE THE UNCERTAINTY IN THE RANGES -------------------------------------------
 
@@ -681,6 +711,240 @@ factor_unc %>%
   .[, .(number.countries = .N), factor] %>%
   .[order(factor)] %>%
   print()
+```
+
+## Retrieve data from ISIMIP
+
+```{r functions_isimip, cache=TRUE}
+
+# FUNCTIONS TO EXTRACT DATA FROM .NC FILES -----------------------------------------
+
+coords2country = function(points) {
+  countriesSP <- rworldmap::getMap(resolution = 'low')
+  pointsSP = sp::SpatialPoints(points, proj4string=CRS(proj4string(countriesSP)))
+  indices = sp::over(pointsSP, countriesSP)
+  indices$ADMIN
+}
+
+# Function to load and extract data from .nc files from ISIMIP
+open_nc_files <- function(file, dname, selected.years, vec) {
+  ncin <- nc_open(file)
+  # get longitude, latitude, time
+  lon <- ncvar_get(ncin, "lon")
+  lat <- ncvar_get(ncin, "lat")
+  # Get variable
+  tmp_array <- ncvar_get(ncin, dname)
+  m <- lapply(selected.years, function(x) vec[[x]])
+
+  out <- lapply(m, function(x) {
+    tmp_slice <- lapply(x, function(y) tmp_array[, , y])
+    # create dataframe -- reshape data
+    # matrix (nlon*nlat rows by 2 cols) of lons and lats
+    lonlat <- as.matrix(expand.grid(lon,lat))
+    # vector of `tmp` values
+    tmp_vec <- lapply(tmp_slice, function(x) as.vector(x))
+    # create dataframe and add names
+    tmp_df01 <- lapply(tmp_vec, function(x) data.frame(cbind(lonlat, x)))
+    names(tmp_df01) <- x
+    da <- lapply(tmp_df01, data.table) %>%
+      rbindlist(., idcol = "month") %>%
+      na.omit()
+    # Convert coordinates to country
+    Country <- coords2country(da[1:nrow(da), 2:3])
+    df <- cbind(Country, da)
+    setDT(df)
+    out <- na.omit(df)[, .(Water.Withdrawn = sum(x)), Country]
+    out[, Water.Withdrawn:= Water.Withdrawn * 10000]
+    out[, Continent:= countrycode(out[, Country],
+                                  origin = "country.name",
+                                  destination = "continent")] %>%
+      .[, Code:= countrycode(out[, Country],
+                             origin = "country.name",
+                             destination = "un")] %>%
+      .[, Country:= countrycode(out[, Code],
+                                origin = "un",
+                                destination = "country.name")] %>%
+      .[!Continent == "Oceania"]
+    setcolorder(out, c("Country", "Continent", "Code", "Water.Withdrawn"))
+  })
+  return(out)
+}
+```
+
+```{r read_nc, cache=TRUE, dependson="functions_isimip"}
+
+# READ IN NC FILES -----------------------------------------------------------------
+
+# Define settings
+vecs <- 1:((2010 - 1970) * 12)
+vec <- split(vecs, ceiling(seq_along(vecs) / 12))
+names(vec) <- 1971:2010
+selected.years <- "2010"
+dname <- "pirrww"
+
+files <- list("h08_wfdei_nobc_hist_varsoc_co2_pirrww_global_monthly_1971_2010.nc",
+              "pcr-globwb_wfdei_nobc_hist_varsoc_co2_pirrww_global_monthly_1971_2010.nc",
+              "lpjml_wfdei_nobc_hist_varsoc_co2_pirrww_global_monthly_1971_2010.nc",
+              "watergap2_wfdei_nobc_hist_varsoc_co2_pirrww_global_monthly_1971_2010.nc")
+
+names.isimip <- c("H08", "PCR-GLOBWB", "LPJmL", "WaterGap")
+
+isimip.dt <- mclapply(files, function(x)
+  open_nc_files(file = x, dname = dname, selected.years = selected.years, vec = vec),
+  mc.cores = detectCores() * 0.75)
+```
+
+```{r corrective_lpjml, cache=TRUE}
+
+# EXTRACT CORRECTIVE COEFFICIENTS FOR IRRIGATION EFFICIENCY FOR LPJML -------------
+
+ncin <- nc_open("irrigation_project_efficiencies.nc")
+lon <- ncvar_get(ncin, "lon")
+lat <- ncvar_get(ncin, "lat")
+tmp_array <- ncvar_get(ncin)
+lonlat <- as.matrix(expand.grid(lon,lat))
+da <- na.omit(cbind(lonlat, as.vector(tmp_array))) %>%
+  data.frame() %>%
+  na.omit()
+Country <- coords2country(da[1:nrow(da), 1:2])
+lpjml_efficiencies <- cbind(Country, da) %>%
+  na.omit() %>%
+  data.table() %>%
+  .[, .(Ep = mean(V3)), Country]
+```
+
+```{r arrange_nc, cache=TRUE, dependson=c("read_nc", "corrective_lpjml")}
+
+# ARRANGE NC FILES ------------------------------------------------------------------
+
+names(isimip.dt) <- names.isimip
+
+isimip.dt <- lapply(isimip.dt, function(x) rbindlist(x)) %>%
+  rbindlist(., idcol = "Model") %>%
+  na.omit() %>%
+  # To correct for duplicate country in Cyprus
+  .[, .(Water.Withdrawn = mean(Water.Withdrawn)), .(Model, Country, Continent, Code)]
+
+lpjml_harmonized <- merge(isimip.dt[Model == "LPJmL"], lpjml_efficiencies, all.x = TRUE) %>%
+  .[, Water.Withdrawn:= Water.Withdrawn * Ep] %>%
+  .[, Ep:= NULL]
+
+isimip.dt <- rbind(isimip.dt[!Model == "LPJmL"], lpjml_harmonized)
+
+fwrite(isimip.dt, "isimip.dt")
+```
+
+```{r merge_isimip_data, cache.lazy = FALSE, dependson=c("arrange_nc", "extract_output")}
+
+# MERGE UNCERTAINTY IN EP WITH ISIMIP DATA ------------------------------------------
+
+efficiency.dt <- copy(uncertainty.dt) %>%
+  setnames(., "V1", "Ep")
+
+ghm.dt <- dcast(isimip.dt, Country + Continent + Code ~ Model, value.var = "Water.Withdrawn")
+full.dt <- merge(efficiency.dt, ghm.dt, by = c("Country", "Continent"), all.x = TRUE) %>%
+  .[, (names.isimip):= lapply(.SD, function(x) x / Ep), .SDcols = names.isimip]
+tmp.dt <- melt(full.dt, measure.vars = names.isimip, variable.name = "Model",
+               value.name = "IWW_corrected")
+ghm.large <- melt(ghm.dt, measure.vars = names.isimip, variable.name = "Model",
+     value.name = "IWW")
+gm.uncertainty <- tmp.dt[, .(min = min(IWW_corrected), max = max(IWW_corrected)), 
+                         .(Country, Continent, Model)]
+gm.dt <- merge(ghm.large, gm.uncertainty)
+```
+
+```{r plot_unc_merge, cache=TRUE, dependson="merge_isimip_data", fig.height=4, fig.width=5, dev = "pdf"}
+
+# PLOT UNCERTAINTY IN EP WITH ISIMIP DATA --------------------------------------------
+
+countries_list <- c("Egypt", "Sudan", "South Africa", "Morocco", "Madagascar", 
+                    "United States", "Mexico", "Brazil", "Chile", "Peru", 
+                    "India", "China", "Pakistan", "Iran", "Indonesia", 
+                    "Italy", "Spain", "France", "Ukraine", "Romania")
+
+gm.dt[Country %in% countries_list] %>%
+  ggplot(., aes(reorder(Country, IWW), IWW, color = Model)) +
+  geom_point(position = position_dodge(0.7)) +
+  geom_errorbar(aes(ymin = min,
+                    ymax = max),
+                position = position_dodge(0.7)) +
+  scale_y_log10(breaks = trans_breaks("log10", function(x) 10 ^ (2 * x)),
+                labels = trans_format("log10", math_format(10 ^ .x))) +
+  scale_color_discrete(name = "GM") +
+  labs(y = expression(paste("Irrigation water withdrawal ", " ", "(", 10^9, m^3/year, "", ")")),
+       x = "") +
+  facet_wrap(~Continent, scales = "free_y") +
+  coord_flip() +
+  theme_AP()
+```
+
+```{r plot_unc_comparison, cache=TRUE, dependson=c("merge_isimip_data", "plot_unc_merge"), dev = "pdf", fig.height=3.5, fig.width=4.5}
+
+# PLOT RANGES OF STRUCTURAL UNCERTAINTY AND RANGES OF 
+# STRUCTURAL UNCERTAINTY + UNCERTAINTY IN IRRIGATION EFFICIENCY --------------------
+
+range.gm <- gm.dt %>%
+  .[, .(min = min(IWW, na.rm = TRUE), max = max(IWW, na.rm = TRUE)), .(Country, Continent)] %>%
+  .[, Approach:= "WaterGap, LPJmL, H08, PCR-GLOBWB"]
+
+range.study <- gm.dt %>%
+  .[, .(min = min(min, na.rm = TRUE), max = max(max, na.rm = TRUE)), .(Country, Continent)] %>%
+  .[, Approach:= "WaterGap, LPJmL, H08, PCR-GLOBWB \n + uncertainty in irrigation efficiency"]
+
+rbind(range.gm, range.study) %>%
+  .[Country %in% countries_list] %>%
+  .[, mean:= (min + max) / 2] %>%
+  ggplot(., aes(reorder(Country, mean), mean, color = Approach)) +
+  geom_errorbar(aes(ymin = min,
+                    ymax = max),
+                position = position_dodge(0.7)) +
+  scale_y_log10(breaks = trans_breaks("log10", function(x) 10 ^ (2 * x)),
+                labels = trans_format("log10", math_format(10 ^ .x))) +
+  scale_color_manual(name = "GM", values = wes_palette("Royal1")) +
+  labs(y = expression(paste("Irrigation water withdrawal ", " ", "(", 10^9, m^3/year, "", ")")),
+       x = "") +
+  facet_wrap(~Continent, scales = "free_y") +
+  coord_flip() +
+  theme_AP() +
+  guides(color = guide_legend(nrow = 2, byrow = TRUE))
+```
+
+
+```{r plot_unc_comparison_complete, cache=TRUE, dependson=c("merge_isimip_data", "plot_unc_merge"), fig.height=6.4, fig.width=5.2}
+
+# PLOT RANGES OF STRUCTURAL UNCERTAINTY AND RANGES OF 
+# STRUCTURAL UNCERTAINTY + UNCERTAINTY IN IRRIGATION EFFICIENCY (COMPLETE) ---------
+
+dd <- list()
+for (i in 1:length(list_continents)) {
+  dd[[i]] <- rbind(range.gm, range.study) %>%
+    .[, mean:= (min + max) / 2] %>%
+    .[Continent %in% list_continents[[i]]] %>%
+    ggplot(., aes(reorder(Country, mean), mean, color = Approach)) +
+    geom_errorbar(aes(ymin = min,
+                      ymax = max),
+                  position = position_dodge(0.7)) +
+    scale_y_log10(breaks = trans_breaks("log10", function(x) 10 ^ (2 * x)),
+                  labels = trans_format("log10", math_format(10 ^ .x))) +
+    scale_color_manual(name = "GM", values = wes_palette("Royal1")) +
+    labs(y = expression(paste("Irrigation water withdrawal ", " ", "(", 10^9, m^3/year, "", ")")),
+         x = "") +
+    facet_wrap(~Continent, scales = "free_y") +
+    coord_flip() +
+    theme_AP() +
+    guides(color = guide_legend(nrow = 2, byrow = TRUE))
+}
+
+dd
+```
+
+
+
+```{r print_ranges, cache=TRUE, dependson="plot_unc_comparison"}
+
+# PRINT RANGES ---------------------------------------------------------------------
+
+# print(range.study, n = Inf)
 ```
 
 # Sensitivity analysis
@@ -759,3 +1023,39 @@ rbind(tmp[IFT == "Mixed"], tmp2) %>%
   theme_AP()
 ```
 
+```{r extract_jager_indices, cache=TRUE, dependson="extract_output", fig.height=7.3, fig.width=5.5}
+
+# EXTRACT SOBOL' INDICES FOR JAGER -------------------------------------------------
+
+jager.tmp <- lapply(y[["Jägermeyr et al. 2015"]], function(x) x$indices$results)
+names(jager.tmp) <- new.rohwer$Country
+
+jager.ind <- rbindlist(jager.tmp, idcol = "Country") %>%
+  .[, Continent:= countrycode(.[, Country],
+                             origin = "country.name",
+                             destination = "continent")] %>%
+  .[, parameters:= ifelse(parameters == "Ea_surf", "E[a[su]]",
+                         ifelse(parameters == "Ec_surf", "E[c[su]]",
+                                ifelse(parameters == "Ea_sprinkler", "E[a[sp]]",
+                                       ifelse(parameters == "Ec_sprinkler", "E[c[sp]]",
+                                              ifelse(parameters == "Ea_micro", "E[a[mi]]",
+                                                     ifelse(parameters == "Ec_micro", "E[c[mi]]",
+                                                            ifelse(parameters == "Proportion_large", "f[L]", parameters)))))))]
+
+Continent_vector <- c("Africa", "Americas", "Asia", "Europe")
+
+lapply(Continent_vector, function(x)
+  ggplot(jager.ind[Continent == x], aes(parameters, original, fill = sensitivity), color = black) +
+    geom_bar(stat = "identity", position = position_dodge(0.6), color = "black") +
+    scale_fill_discrete(name = "Sensitivity", labels = c("Si", "Ti")) +
+    labs(x = "", y = "Sobol' indices") +
+    scale_x_discrete(labels = ggplot2:::parse_safe) +
+    coord_flip() +
+    scale_y_continuous(breaks = pretty_breaks(n = 3)) +
+    facet_wrap(~Country) +
+    theme_AP() +
+    theme(strip.text.x = element_text(size = 6), 
+          axis.text.x = element_text(size = 6)) +
+    ggtitle(x)
+)
+```
